--- a/course.css
+++ b/course.css
@@ -14,7 +14,7 @@ body {
 }
 
 nav {
-    background-color: rgba(0, 0, 107, 0.94);
+    background-color:black;
   padding: 10px 20px;
   align-items: center;
   height: 60px;
