--- a/website.css
+++ b/website.css
@@ -156,7 +156,7 @@ html {
 @keyframes scroll-hero-images {
   0% { transform: translateX(0); }
   100% { transform: translateX(-100%); }
-
+}
 /* Image carousel */
 .image-carousel-container {
   padding: 20px;
