--- a/course.css
+++ b/course.css
@@ -6,7 +6,7 @@ body {
   font-size: 16px;
   line-height: 30px;
   font-weight: 300;
-  background: linear-gradient(to bottom, #232526, #414345);
+  background: black;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -79,7 +79,7 @@ header {
 .logo-container img {
     width: 120px; /* Adjust size as needed */
     position: absolute;
-    top: 20px;
+    top: -15px;
     left: 20px;
 }
 
@@ -151,25 +151,41 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding-bottom: 20px;
 }
 
 .content-container {
+    position: relative;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    width: 80%;
-    margin-top: 60px;
+    width: 100%;
+}
+
+.image-container {
+  flex: 1;
 }
 
 .image-container img {
-    width: 75%;
+    flex: 1;
+    width: 100%;
     height: auto;
 }
 
 .text-container {
-    width: 50%;
-    text-align: left;
+    flex: 1;
+    text-align: center;
+    padding: 50px;
+}
+
+.fog-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80%; /* adjust based on how much of the bottom should fade */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1.0) 100%);
+  pointer-events: none; /* allows clicks through the overlay */
 }
 
 h1 {
@@ -221,7 +237,21 @@ p {
 .video-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
     margin-top: 20px;
+}
+
+.video-container video {
+  max-width: 800px;
+  width: 100%;
+}
+
+.video-container-caption {
+  max-width: 1000px;
+  width: 100%;
+  color: lightgray;
+  font-size: 12px;
 }
 
 .section-title {
